Update smoke tests